chore: add prefixes for env variables

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
-PORT=
-MONGO_URI=
-LOGGER_LEVEL=
-BASE_URL=
+MOVIE_MATE_MOVIE_SERVICE_PORT=
+MOVIE_MATE_MOVIE_SERVICE_BASE_URL=
+
+MOVIE_MATE_MOVIE_SERVICE_MONGO_URI=
+
+MOVIE_MATE_MOVIE_SERVICE_LOGGER_LEVEL=
