--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,19 @@
-MOVIE_MATE_MOVIE_SERVICE_PORT=
-MOVIE_MATE_MOVIE_SERVICE_BASE_URL=
+# =======================
+#      Movie Service
+# =======================
 
-MOVIE_MATE_MOVIE_SERVICE_MONGO_URI=
+MOVIE_MATE_MOVIE_SERVICE_HOST=                      # Host address (default: localhost)
+MOVIE_MATE_MOVIE_SERVICE_PORT=                      # Port for movie service (default: 3000)
+MOVIE_MATE_MOVIE_SERVICE_BASE_URL=                  # Context path for movie service (default: /api)
 
-MOVIE_MATE_MOVIE_SERVICE_LOGGER_LEVEL=
+# =======================
+#      Data Storage
+# =======================
+
+MOVIE_MATE_MOVIE_SERVICE_MONGO_URI=                 # MongoDB string for connection
+
+# =======================
+#         Logging
+# =======================
+
+MOVIE_MATE_MOVIE_SERVICE_LOGGER_LEVEL=              # Logging level (e.g., debug, info (default), warning, error)
