--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,13 @@ MOVIE_MATE_MOVIE_SERVICE_BASE_URL=                  # Context path for movie ser
 MOVIE_MATE_MOVIE_SERVICE_MONGO_URI=                 # MongoDB string for connection
 
 # =======================
+#   Service Discovery
+# =======================
+
+MOVIE_MATE_DISCOVERY_SERVER_HOST=              # Discovery server host
+MOVIE_MATE_DISCOVERY_SERVER_PORT=              # Discovery server port
+
+# =======================
 #         Logging
 # =======================
 
