--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prod": "node server.js"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "express": "^4.21.2",
     "mongoose": "^8.10.1",
     "swagger-jsdoc": "^6.2.8",
