[Upd] cors configuration added

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@
 MOVIE_MATE_MOVIE_SERVICE_HOST=                      # Host address (default: localhost)
 MOVIE_MATE_MOVIE_SERVICE_PORT=                      # Port for movie service (default: 3000)
 MOVIE_MATE_MOVIE_SERVICE_BASE_URL=                  # Context path for movie service (default: /api)
+MOVIE_MATE_MOVIE_SERVICE_ALLOWED_ORIGINS=           # Comma separated CORS allowed origins
 
 # =======================
 #      Data Storage
