--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "mongoose": "^8.10.1",
     "swagger-jsdoc": "^6.2.8",
