expose endpoint for getting top 5 movies

--- a/.env.example
+++ b/.env.example
@@ -19,9 +19,16 @@ MOVIE_MATE_MOVIE_SERVICE_MONGO_URI=                 # MongoDB string for connect
 
 MOVIE_MATE_DISCOVERY_SERVER_HOST=              # Discovery server host
 MOVIE_MATE_DISCOVERY_SERVER_PORT=              # Discovery server port
+MOVIE_MATE_MOVIE_SERVICE_LB_TAGS=              # Comma separated tags to send to LB
 
 # =======================
 #         Logging
 # =======================
 
-MOVIE_MATE_MOVIE_SERVICE_LOGGER_LEVEL=              # Logging level (e.g., debug, info (default), warning, error)
+MOVIE_MATE_MOVIE_SERVICE_LOGGER_LEVEL=         # Logging level (e.g., debug, info (default), warning, error)
+
+# =======================
+#         API keys
+# =======================
+
+MOVIE_MATE_TMDB_API_KEY=                       # TMDB API key
