--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "prod": "node server.js"
+    "prod": "node server.js",
+    "prettier": "prettier --write '**/*.{js,mjs}'"
   },
   "dependencies": {
     "axios": "^1.11.0",
@@ -26,7 +27,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
     "nodemon": "^3.1.9",
-    "prettier": "^3.5.2"
+    "prettier": "^3.6.2"
   },
   "lint-staged": {
     "**/*.{js,mjs}": [
